kotlin/programming-kotlin_code/oop/output/readonly.output
readonly.kts:5:1: error: val cannot be reassigned
car.yearOfMake = 2019 //ERROR: val cannot be reassigned
^
